ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - gitpod.work
      - "*.gitpod.work"
      - "*.ws.gitpod.work"
      secretName: https-certificates
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy
            port:
              number: 443
